snapshots/com/wadpam/openserver/errors/2-SNAPSHOT/maven-metadata.xml.md5
392b48f81cd194cdde65237305c91d11